Initial commit: tambah backend dan ubah ke PHP

--- a/_Chatbot/chatbot.css
+++ b/_Chatbot/chatbot.css
@@ -44,8 +44,7 @@ body.show-chatbot #chatbot-toggler {
     position: absolute;
 }
 
-body.show-chatbot #chatbot-toggler span:first-child,
-#chatbot-toggler span:last-child {
+body.show-chatbot #chatbot-toggler span:first-child {
     opacity: 0;
 }
 
